tests impr and fight with log